# password_manager

./: .gitignore  .gitmodules  CMakeList.txt  CMakeLists.txt  encryption.cpp  encryption.h  huffman_compression.md  main.cpp  manager.cpp  manager.h  performance_metrics.cpp  readme.md  test_password_manager.cpp  ui.cpp
encrypt/decrypt/: encryption.cpp  encryption.h
include/: manager.h  ui.h
src/: encryption.cpp  main.cpp  manager.cpp  ui.cpp
test/: test_password_manager.cpp
